# smart_greenhouse_OB1

./: .gitignore  CHANGELOG.md  README.md  config.json  main.py  pyproject.toml
greenhouse/: actuators.py  controller.py  database.py  gui.py  sensors.py
tests/: conftest.py  test_controller.py  test_database.py
