[project]
name = "smart-greenhouse-ob1"
version = "0.1.0"
description = ""
authors = [
    {name = "makhailya",email = "makhailya@gmail.com"}
]
requires-python = "^3.14"
dependencies = [
    "schedule (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
